syntax = "proto3";

package auth;

import "common/base_response.proto";
import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/fahrillrizal/ecommerce-grpc/pb/auth";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Logout (LogoutRequest) returns (LogoutResponse);
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
}

message RegisterRequest {
    string full_name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
    string email = 2 [(buf.validate.field).string = {email: true, min_len: 5, max_len: 255}];
    string password = 3 [(buf.validate.field).string = {min_len: 5, max_len: 12}];
    string password_confirmation = 4 [(buf.validate.field).string = {min_len: 5, max_len: 12}];
}

message RegisterResponse {
    common.BaseResponse base = 1;
}

message LoginRequest {
    string email = 1 [(buf.validate.field).string = {email: true, min_len: 5, max_len: 255}];
    string password = 2 [(buf.validate.field).string = {min_len: 5, max_len: 12}];
}

message LoginResponse {
    common.BaseResponse base = 1;
    string token = 2;
}

message LogoutRequest {}

message LogoutResponse {
    common.BaseResponse base = 1;
}

message ChangePasswordRequest {
    string current_password = 1 [(buf.validate.field).string = {min_len: 5, max_len: 12}];
    string new_password = 2 [(buf.validate.field).string = {min_len: 5, max_len: 12}];
    string new_password_confirmation = 3 [(buf.validate.field).string = {min_len: 5, max_len: 12}];
}

message ChangePasswordResponse {
    common.BaseResponse base = 1;
}

message GetProfileRequest {}

message GetProfileResponse {
    common.BaseResponse base = 1;
    string id = 2;
    string full_name = 3;
    string email = 4;
    string role_name = 5;
    google.protobuf.Timestamp member_since = 6;
}